# localbiz-scout-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: create-updater-manifest.mjs  generate-icon.mjs
src/: businessApi.ts  exportCsv.ts  externalLinks.ts  main.tsx  storage.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ui/: App.tsx
