[package]
name = "localbiz_scout"
version = "0.1.0"
description = "LocalBiz Scout desktop client"
authors = ["Kown"]
edition = "2021"

[lib]
name = "localbiz_scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
